add_executable(_p_sw_dgt 
    _p_sw_dgt.cpp
)
add_executable(_fp_if_scsp
    _fp_if_scsp.cpp
)
# set_target_properties(
# 	RK

# 	PROPERTIES
# 	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
# 	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
# 	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
# )
